--- a/index.html
+++ b/index.html
@@ -27,6 +27,11 @@
             <input id="size" max="25" min="2" type="number" value="5">
         </div>
         <div class="ui"><a id="dec"> &lt; </a> <span id="level">Level</span> <a id="inc">&gt;</a></div>
+        <div class="ui controls">
+            <span><b>Controls</b></span>
+            <span><code>r</code>: Reset</span>
+            <span><code>space</code>:</span> <span>Possible Steps</span>
+        </div>
     </div>
     <div id="saveDialog" class="dialog">
         <input id="saveName" placeholder="Level-Name" type="text" class="dialogElement">
