Too Many Steps message & Blue hover glow

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <main>
     <div id="root"></div>
     <div id="ui">
-        <div class="ui game-ui"> Steps: <span id="stepCount">0</span></div>
+        <div class="ui game-ui"> Steps: <span id="stepCount">0</span>/<span id="maxSteps">0</span></div>
         <div class="ui game-ui"> Stepsize: <span id="stepSize">1</span></div>
         <div id="levelEditor">
             <div id="typeSelect">
@@ -32,6 +32,9 @@
             <span><code>r</code>: Reset</span>
             <span><code>space</code>:</span> <span>Possible Steps</span>
         </div>
+    </div>
+    <div id="tooManySteps" class="dialog">
+        <span>Too many steps! Try again</span>
     </div>
     <div id="saveDialog" class="dialog">
         <input id="saveName" placeholder="Level-Name" type="text" class="dialogElement">
