Removal of showing the max steps...

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <main>
     <div id="root"></div>
     <div id="ui">
-        <div class="ui game-ui"> Steps: <span id="stepCount">0</span>/<span id="maxSteps">0</span></div>
+        <div class="ui game-ui"> Steps: <span id="stepCount">0</span></div>
         <div class="ui game-ui"> Stepsize: <span id="stepSize">1</span></div>
         <div id="levelEditor">
             <div id="typeSelect">
