Changes for Crack the Code - Added the Title "The Caucus Race"

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 <main>
     <div id="root"></div>
     <div id="ui">
+        <h1 id="title">The Caucus Race</h1>
         <div class="ui game-ui"> Steps: <span id="stepCount">0</span></div>
         <div class="ui game-ui"> Stepsize: <span id="stepSize">1</span></div>
 
