--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <div class="ui game-ui"> Steps: <span id="stepCount">0</span></div>
         <div class="ui game-ui"> Stepsize: <span id="stepSize">1</span></div>
 
-        <div class="ui"><a id="dec"> &lt; </a> <span id="level">Level</span> <a id="inc">&gt;</a></div>
+        <div class="ui"><span id="level">Level</span></div>
         <div class="ui controls">
             <span><b>Controls</b></span>
             <span><code>r</code>: Reset</span>
@@ -23,7 +23,9 @@
         </div>
     </div>
     <div class="dialog" id="tooManySteps">
-        <span>Too many steps! Try again</span>
+        <span>Too many steps!<br>Try again</span>
+    </div>
+    <div class="dialog" id="finishDialog">
     </div>
 </main>
 <script src="/src/main.ts" type="module"></script>
