--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
         <div class="ui"><span id="level">Level</span></div>
         <div class="ui controls">
             <span><b>Controls</b></span>
+            <span><code>h</code>: Intro message</span>
             <span><code>r</code>: Reset</span>
             <span><code>space</code>:</span> <span>Possible Steps</span>
         </div>
     </div>
     <div class="dialog" id="tooManySteps">
-        <span>Too many steps!<br>Try again</span>
+        <span>You used too many steps!<br>Please try again</span>
     </div>
     <div class="dialog" id="finishDialog">
     </div>
